<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Layout_hw</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="linear_layout_text">Linear Layout</string>
    <string name="my_computer_text">My Computer</string>
    <string name="my_computer_description">This is your machine</string>
    <string name="my_docs_text">My Documents</string>
    <string name="iexploder_text">Internet Exploder</string>
    <string name="my_docs_description">This holds your documents</string>
    <string name="iexploder_description">Dont use this!</string>

</resources>